Fix profile picture cropping

--- a/frontend/src/app/application/component/content/message/message.component.scss
+++ b/frontend/src/app/application/component/content/message/message.component.scss
@@ -112,7 +112,8 @@
 .picture {
   border-radius: 20px;
   width: 40px;
-  height: 40px;;
+  height: 40px;
+  object-fit: cover;
 }
 
 .date {
