--- a/frontend/src/app/application/component/content/profile/profile.component.scss
+++ b/frontend/src/app/application/component/content/profile/profile.component.scss
@@ -31,6 +31,7 @@
   height: 400px;
   display: block;
   margin: 0 auto 10px auto;
+  object-fit: cover;
 }
 
 .form {
