--- a/frontend/src/app/application/component/menu/menu.component.scss
+++ b/frontend/src/app/application/component/menu/menu.component.scss
@@ -17,6 +17,7 @@
   height: 150px;
   display: block;
   margin: 30px auto 10px auto;
+  object-fit: cover;
 }
 
 .username {
